recursion.lessons.recursion.tree.Tree.scala.error
Tree:20: error: illegal start of simple expression
	return
        ^