recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
current(steps)	
avance(length)

if(steps != 0){
 droite(angle)
 tree(steps-1,shrink*length,angle,shrink)
 gauche(angle*2)
 tree(steps-1,shrink*length,angle,shrink)
droite(angle)
recule(length)



}

else {
	recule length
	return
}
}